force-app/main/default/objects/DemoCampaign__c/DemoCampaign__c.object-meta.xml
<CustomObject>
    <label>DemoCampaign</label>
    <nameField>
        <label>DemoCampaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoCampaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>