force-app/main/default/objects/DemoCampaign__c/fields/DemoLocation__c.field-meta.xml
<CustomField>
    <fullName>DemoLocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DemoLocation</label>
    <referenceTo>DemoLocation__c</referenceTo>
    <relationshipLabel>DemoCampaigns</relationshipLabel>
    <relationshipName>DemoCampaigns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>