force-app/main/default/objects/DemoCampaign__c/fields/DemoLocationName__c.field-meta.xml
<CustomField>
    <fullName>DemoLocationName__c</fullName>
    <label>DemoLocationName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>