force-app/main/default/objects/DemoCampaign__c/fields/EndDates__c.field-meta.xml
<CustomField>
    <fullName>EndDates__c</fullName>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>