force-app/main/default/objects/DemoCampaign__c/fields/StartDates__c.field-meta.xml
<CustomField>
    <fullName>StartDates__c</fullName>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>