force-app/main/default/objects/DemoCampaign__c/validationRules/EndDateBeforeToday.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateBeforeToday</fullName>
    <active>true</active>
    <description>The campaign cannot end eralier than the day it is created</description>
    <errorConditionFormula>EndDates__c  &lt; TODAY()&amp;&amp; NOT (ISCHANGED(  Status__c ))</errorConditionFormula>
    <errorMessage>The campaign cannot end eralier than the day it is created</errorMessage>
</ValidationRule>