force-app/main/default/objects/DemoCampaign__c/validationRules/onlyStatusUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>onlyStatusUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISNEW()) &amp;&amp; NOT (ISCHANGED(Status__c))</errorConditionFormula>
    <errorMessage>Only Status field can be updated</errorMessage>
</ValidationRule>