force-app/main/default/objects/DemoCampaign__c/validationRules/StartBeforeEnd.validationRule-meta.xml
<ValidationRule>
    <fullName>StartBeforeEnd</fullName>
    <active>true</active>
    <description>The campaign cannot end before it starts.</description>
    <errorConditionFormula>StartDates__c  &gt;  EndDates__c &amp;&amp; NOT (ISCHANGED(  Status__c ))</errorConditionFormula>
    <errorMessage>The campaign cannot end before it starts.</errorMessage>
</ValidationRule>