force-app/main/default/objects/DemoCampaign__c/validationRules/StartDateBeforeToday.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateBeforeToday</fullName>
    <active>true</active>
    <description>The campaign cannot start eralier than the day it is created</description>
    <errorConditionFormula>StartDates__c  &lt; Today()&amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>The campaign cannot start eralier than the day it is created</errorMessage>
</ValidationRule>