force-app/main/default/objects/DemoCampaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDates__c</columns>
    <columns>EndDates__c</columns>
    <columns>Status__c</columns>
    <columns>DemoLocation__c</columns>
    <columns>DemoLocationName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>